--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,6 +3,10 @@
     <h1><%= @list.name %></h1>
     <p class="text-muted">There is a total of <%= @list.bookmarks.count %> bookmark<%= 's' if @list.bookmarks.count != 1 %></p>
     <%= link_to 'Bookmark a movie', new_list_bookmark_path(@list), class: 'btn btn-primary' %>
+    <div class="mt-3">
+      <%= link_to 'Back to lists', lists_path, class: 'link-clean mx-2' %>
+      <%= link_to 'Delete list', list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'link-clean text-danger mx-2'%>
+    </div>
   </div>
 
   <div class="row mt-4">
