--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -12,7 +12,7 @@
   <div class="row mt-4">
     <% @list.bookmarks.each do |bookmark| %>
       <div class="col d-flex justify-content-center">
-        <%= render 'bookmark-card', bookmark: bookmark %>
+        <%= render 'bookmark_card', bookmark: bookmark %>
       </div>
     <% end %>
   </div>
