--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <% @movies.each do |movie| %>
       <div class="col mb-3">
-        <%= render 'movie-card', movie: movie %>
+        <%= render 'preview_movie_card', movie: movie %>
       </div>
     <% end %>
   </div>
