--- a/app/views/bookmarks/_select_movie_card.html.erb
+++ b/app/views/bookmarks/_select_movie_card.html.erb
@@ -3,7 +3,7 @@
     <img src="<%= movie.poster_url %>" class="movie-poster border-radius-30" alt="">
   </a>
   <div class="ms-2 me-5 collapse collapse-horizontal" id="collapseMovie<%= movie.id %>">
-    <div class="card p-3 hidden-scrollbar movie-card border-radius-30">
+    <div class="card p-3 hidden-scrollbar select-movie-card border-radius-30">
       <h5 class="card-title text-center"><strong><%= movie.title %></strong></h5>
       <p class="card-subtitle text-center text-muted mb-1">Rating: <%= movie.rating %></p>
       <p><%= movie.overview %></p>
