--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-light sticky-top">
+    <nav id="navbar" data-controller="navbar" class="navbar navbar-expand-lg bg-light sticky-top">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav mx-auto">
-            <%= link_to 'Movies', movies_path, class: "nav-link" %>
-            <%= link_to 'Lists', lists_path, class: "nav-link" %>
+            <%= link_to 'Movies', movies_path, class: "nav-link", id: "movies-navlink" %>
+            <%= link_to 'Lists', lists_path, class: "nav-link", id: "lists-navlink" %>
           </div>
         </div>
       </div>
