added cl_image_tag to list#show for debugging purposes

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,6 +9,8 @@
     </div>
   </div>
 
+  <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+
   <div class="row mt-4">
     <% @list.bookmarks.each do |bookmark| %>
       <div class="col d-flex justify-content-center">
